@@ -30,7 +30,7 @@ module Spec
             "#{current_indentation}#{example.description} (ERROR - #{counter})"
           end
 
-          output.puts(failure.expectation_not_met? ? red(message) : magenta(message))
+          output.puts(red(message))
           output.flush
         end
 
